2011-05-24  Paul Eggert  <eggert@cs.ucla.edu>

	* data.c (arith_driver, Flsh): Avoid unnecessary casts to EMACS_UINT.

2011-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	* ccl.c (ccl_driver): Redo slightly to avoid the need for 'unsigned'.

	ccl: add integer overflow checks
	* ccl.c (CCL_CODE_MAX, GET_CCL_RANGE, GET_CCL_CODE, GET_CCL_INT):
	(IN_INT_RANGE): New macros.
	(ccl_driver): Use them to check for integer overflow when
	decoding a CCL program.  Many of the new checks are whether XINT (x)
	fits in int; it doesn't always, on 64-bit hosts.  The new version
	doesn't catch all possible integer overflows, but it's an
	improvement.  (Bug#8719)

	* alloc.c (make_event_array): Use XINT, not XUINT.
	There's no need for unsigned here.

	* mem-limits.h (EXCEEDS_LISP_PTR) [!USE_LSB_TAG]: EMACS_UINT -> uintptr_t
	This follows up to the 2011-05-06 change that substituted uintptr_t
	for EMACS_INT.  This case wasn't caught back then.

2011-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	Rework Fformat to avoid integer overflow issues.
	* editfns.c: Include <float.h> unconditionally, as it's everywhere
	now (part of C89).  Include <verify.h>.
	(MAX_10_EXP, CONVERTED_BYTE_SIZE): Remove; no longer needed.
	(pWIDE, pWIDElen, signed_wide, unsigned_wide): New defns.
	(Fformat): Avoid the prepass trying to compute sizes; it was only
	approximate and thus did not catch overflow reliably.  Instead, walk
	through the format just once, formatting and computing sizes as we go,
	checking for integer overflow at every step, and allocating a larger
	buffer as needed.  Keep track separately whether the format is
	multibyte.  Keep only the most-recently calculated precision, rather
	than them all.  Record whether each argument has been converted to
	string.  Use EMACS_INT, not int, for byte and char and arg counts.
	Support field widths and precisions larger than INT_MAX.  Avoid
	sprintf's undefined behavior with conversion specifications such as %#d